--- a/endpoints.yml
+++ b/endpoints.yml
@@ -10,8 +10,8 @@
 # Server which runs your custom actions.
 # https://rasa.com/docs/rasa/core/actions/#custom-actions/
 
-#action_endpoint:
-#  url: "http://localhost:5055/webhook"
+action_endpoint:
+  url: "http://action_server:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
@@ -24,6 +24,14 @@
 #    db: <number of your database within redis, e.g. 0>
 #    password: <password used for authentication>
 #    use_ssl: <whether or not the communication is encrypted, default false>
+
+tracker_store:
+  type: redis
+  url: redis
+  port: 6379
+  db: 1
+  password:
+  use_ssl: false
 
 #tracker_store:
 #    type: mongod
