--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
-  dev_rasa:
+  rasa:
     image: rasa/rasa:latest-full
     ports:
       - 5005:5005
@@ -8,7 +8,7 @@ services:
       - ./:/
     command:
       - run
-  dev_action_server:
+  action_server:
     image: rasa/rasa-sdk:latest
     volumes:
       - ./actions:/actions
